--- a/_posts/study/TIL/2021-09-01-26.md
+++ b/_posts/study/TIL/2021-09-01-26.md
@@ -15,12 +15,43 @@ W5D3 Part1 - MVC Form 처리 / WebApplicationContext 에 대해 알아보자!
 
 ## Form 처리
 
-추후작성
+### POST 
+
+- `@PostMapping` 어노테이션을 달아 요청을 받을 수 있음
+- 메소드 작성시 파라미터로 form에서 넘어오는 데이터를 받는다
+    - 이 데이터를 감싸는 Wrapper 클래스를 설정할 수 있으며, 이것이 `DTO`이다
+    - `DTO`로 Record 클래스를 사용할 수 있다.
+
+```java
+@PostMapping(URL)
+public 메소드(DTO dto){
+    // Request를 받고 변수에 저장해주는 record -> DTO
+    dto.데이터
+    return 목적view;
+}
+```
+
+### GET
+
+- `@GetMapping` 어노테이션으로 요청을 받는다
+- get 요청 URL에 데이터를 담아 보낼수가 있다.
+- 이 경우 메소드에서 파라미터를 받기 전 `@PathVariable`로 데이터를 매핑해준다.
+
+```java
+@GetMapping(".../{데이터}")
+public 메소드(@PathVariable("데이터") 변수){
+    ...
+    return 목적view;
+}
+```
+
 
 <br>
 
 ## WebApplicationContext
 
+- `WebApplicationContext` vs `ApplicationContext` : Servlet Context에 접근 가능한지 차이
+    - 톰캣이 Servlet Context 
 - 프로젝트 규모가 큰 `Monolithic` 아키텍처에서는 App Context를 분리해서 사용했음
 - Servlet과 App Context 간의 구조를 보고 코드에 적용해보자
 
