--- a/_posts/study/TIL/2021-09-01-27.md
+++ b/_posts/study/TIL/2021-09-01-27.md
@@ -1,5 +1,5 @@
 ---
-title:  "[데브코스] Spring Rest API"
+title:  "[데브코스] Spring Rest API 1"
 date: 2021-09-01
 categories: 
   - TIL
@@ -34,7 +34,7 @@ W5D3 Part2 - Rest API 정의와 Http Message Converter에 대해 알아보자!
 - `Level 2` : 목적에 맞는 HTTP Method를 사용하는 것. 자세한건 -> ([🚀 포스팅 이동](/til/23/))
 - `Level 3` : `HATEOAS`(Hypermedia as the Engine of Application State)를 사용하는것
 
-<div class="sub_title">HATEOAS : 리소스를 통해 컨트롤 가능한 행위를 제공한다.</div>
+<div class="sub_title">HATEOAS : 리소스를 통해 컨트롤 가능한 '행위'까지 제공한다.</div>
 
 ```json
 {
@@ -58,9 +58,10 @@ W5D3 Part2 - Rest API 정의와 Http Message Converter에 대해 알아보자!
 
 1. URL은 정보의 자원을 표현한다. (동사X 명사O)
 1. 자원에 대한 행위는 HTTP Method로 표현
-1. `/`는 계층 관계를 나타낸다 (동사표현은 자원 뒤로)
+1. `/`는 계층 관계를 나타낸다 
 1. URL 마지막에 `/`를 포함하지 않는다
 1. URI 가독성을 위해선 `-`을 사용 (`_` 사용은 지양)
+1. 행위 표현은 URI 마지막에서 표현한다.
 
 <br>
 
@@ -68,7 +69,7 @@ W5D3 Part2 - Rest API 정의와 Http Message Converter에 대해 알아보자!
 
 ![image](https://user-images.githubusercontent.com/71180414/131729800-fc57caed-9da6-43a1-ba5a-12504ee07e9d.png){:style="width:70%; margin-top:15px;"}
 
-- 하나의 메시지 컨버터가 요청, 응답의 데이터 변환을 모두 맡는다
+- HTTP 요청, 응답을 자바에서 바로 처리할 수 없기 때문에 메시지 컨버터를 통해 파싱(?)하는 과정을 거친다.
 - `Contents Type`을 통해 메시지 컨버터의 동작 여부를 정한다!
 
 ### 의존성 설정
@@ -89,6 +90,14 @@ W5D3 Part2 - Rest API 정의와 Http Message Converter에 대해 알아보자!
 	<version>1.4.17</version>
 </dependency>
 ```
+
+### Converter 적용
+
+```java
+@ResponseBody
+@RequestBody
+```
+
 
 ### Converter 변경
 
