--- a/_posts/study/TIL/2021-09-02-28.md
+++ b/_posts/study/TIL/2021-09-02-28.md
@@ -10,7 +10,7 @@ toc: false
 toc_sticky: false
 ---
 
-W5D4 - 
+W5D4 - 렌더링방식 / ResponseEntity / CORS에 대해 알아보자!
 
 
 ## 렌더링 방식
@@ -89,14 +89,75 @@ public ResponseEntity<제네릭> 메소드(@PathVariable(데이터) ...) {
 
 ## Spring CORS
 
-- 
+### CORS 설정 - Servlet Context
 
-cors 설정 / 컨트롤러 어노테
+- Servlet Context Config에서 `addCorsMappings` 메소드를 사용해 CORS 허용을 해줄 수 있다.
+- 허용할 Origin, URL, 메소드를 정할 수 있음
+
+```java
+@Override
+public void addCorsMappings(CorsRegistry registry) {
+    // api/ 하위로 들어오는 모든 origin의 GET 요청만 허용한다
+    registry.addMapping("/api/**")
+            .allowedMethods("GET")
+            .allowedOrigins("*");
+}
+```
+
+### CORS 설정 - Annotation
+
+- 컨트롤러 클래스나 포함 메소드에 `@CrossOrigin` 달아 기능별로 설정도 가능함
+
+```java
+@CrossOrigin(origins=" ", methods = RequestMethod.GET)
+[ 컨트롤러 or 메소드 ]
+```
+
+<br>
+
+## DTO
+
+- Request가 오면 메시지 컨버터로 도메인에 맞는 형식으로 변환하여 파라미터로 받을 수 있다.
+- 이때 도메인 형식을 정의해주는 것이 바로 `DTO`인데 보통 Record 클래스로 작성한다
+  - 도메인을 수정하지 않고 DTO를 만들어주는 것이 좋음
+- Request -> 메시지컨버터(`@RequestBody`) -> `DTO` -> 사용
+
+<div class="sub_title">Request를 DTO로 변환 후 응답하는 메소드</div>
+
+```java
+@PostMapping(".../{데이터}}")
+@ResponseBody
+public 메소드(@PathVariable("데이터") ..., @RequestBody DTO dto) {
+  dto.value();
+  ...
+}
+```
+
+<div class="sub_title">DTO - Record 클래스 정의</div>
 
 
-요청 데이터의 타입이 맞지 않을때 도메인은 건들지말고 DTO를 만들어주자
+```java
+public record DTO(
+        Value value,
+        ...
+) {
+    // value -> dto
+    static DTO of(Value value) {
+        return new CustomerDto(
+                value.getValue(),
+                ...
+        );
+    }
 
-어케만드냐? -> of to
+    // dto -> customer
+    // 생성의 책임이 service에 있을지 dto에 있을지는 고민
+    static Value to(DTO dto) {
+        return new Customer(
+                dto.value(),
+                ...
+        );
+    }
+}
+```
 
-요청의 validation 룰은 컨트롤러 / 비즈니스 도메인은 entity
-
+<br>
