--- a/_posts/study/TIL/2021-08-02-1.md
+++ b/_posts/study/TIL/2021-08-02-1.md
@@ -125,6 +125,7 @@ W1D1 - 이제 시작이다 !!
 |Alt + I (원래 insert)|오버라이딩 단축키(난 i로 바꿈)|
 |Ctrl + Shift + A|액션 검색|
 |Ctrl + F10|실행서버 옵션|
+|Alt + Shift + U|Camel Case 변경|
 
 <br>
 
