--- a/_posts/study/TIL/2021-09-03-29.md
+++ b/_posts/study/TIL/2021-09-03-29.md
@@ -56,7 +56,7 @@ logging:
 ### 결과
 
 - CORS 및 메시지 컨버터(Marshaller) 설정은 기존처럼 `WebMvcConfigurer`을 상속받아 작성해줘야함
-- 나머지는 모두 yaml에서 설정됨. 
+- `Auto Configuration`을 통해 자동 설정됨
   - Resource Handler 설정
   - Json 형식 변환 설정
   - jdbc 템플릿 설정
