--- a/_posts/study/TIL/2021-09-28-31.md
+++ b/_posts/study/TIL/2021-09-28-31.md
@@ -1,5 +1,5 @@
 ---
-title:  "[데브코스] Spring JPA 1"
+title:  "[데브코스] JPA - 영속성 컨텍스트"
 date: 2021-09-28
 categories: 
   - TIL
@@ -10,7 +10,7 @@ toc: false
 toc_sticky: false
 ---
 
-W8D2 - Entity Manger / 영속성 컨텍스트에 대해 알아보자
+W8D2 Part1 - Entity Manger / 영속성 컨텍스트에 대해 알아보자
 
 ## Entity Manager
 
@@ -197,3 +197,5 @@ transaction.commit(); // flush -> DELETE ..
 
 1. 영속성 컨텍스트에서 entity 삭제
 2. 커밋(Flush) 발생시 삭제 감지 후 쿼리 실행
+
+<br>
