--- a/_posts/study/TIL/2021-09-29-33.md
+++ b/_posts/study/TIL/2021-09-29-33.md
@@ -11,3 +11,108 @@ toc_sticky: false
 ---
 
 W8D3 - 
+
+## 연관관계 매핑
+
+- DB에서 테이블은 **외래키**를 통해 연관 관계를 맺는다.
+- Java에서 객체(Entity)끼리는 참조, 즉 **주소**를 통해 연관관계를 맺는다.
+
+### 방향성
+
+- `단방향 관계` : 둘 중 한쪽만 참조하는 것
+
+<div class="sub_title">ex) 단방향 매핑</div>
+
+```java
+class Member {
+	private long id;
+	private List<Order> orders; // 회원 -> 주문
+}
+
+class Order {
+	private String id;
+}
+
+Member member = new Member();
+Order order = meber.getOrders().get(0); // 회원 -> 주문에 참조가 가능하다.
+
+order.getMember() // (X)
+```
+
+<br>
+
+- `양방향 관계` : 양쪽 모두 서로 참조하는 것
+- 테이블에서의 관계는 항상 양방향임
+
+<div class="sub_title">ex) 양방향 매핑</div>
+
+```java
+class Member {
+	private long id;
+	private List<Order> orders; // 회원 -> 주문
+}
+
+class Order {
+	private String id;
+	private Member member; // 주문 -> 회원
+}
+
+Member member = new Member();
+Order order = member.getOrders().get(0); // 회원 -> 주문 참조 (O)
+order.getMember(); // 주문 -> 회원 참조 (O)
+```
+
+```sql
+-- 양방향 조인 
+SELECT * FROM member AS m JOIN orders AS o 
+ON m.id = o.member_id;
+
+SELECT * FROM orders AS o JOIN member AS m
+ON o.member_id = m.id
+```
+
+### 다중성
+
+- `일대일` 관계 (1:1) : 양쪽 엔티티가 서로 단 하나의 관계를 가지는 것
+- `일대다` 관계 (1:N) : 한쪽 엔티티가 다른 엔티티의 여러 객체를 가질 수 있는 것
+- `다대다` 관계 (N:M) : 양쪽 엔티티 모두 1:N 관계를 가지는 것 (매핑 테이블이 필요하다.)
+
+### 연관관계 주인 (mappedBy)
+
+- 객체를 양방향 연관관계로 만들면 관계의 주인을 정해줘야 함.
+- 외래키를 관리할 객체를 지정한다.
+- 연관관계의 주인만이 외래키를 생성/수정/삭제 할 수 있음
+  - 주인이 아닌 쪽은 조회만 가능
+- 테이블 중 FK가 있는 쪽이 연관관계의 주인이 된다.
+
+### 객체 그래프 탐색
+
+- `양방향 관계`일 경우 객체의 참조를 통해 서로를 가져오는 것
+
+<div class="sub_title">ex) 객체 그래프 탐색</div>
+
+```java
+class Member {
+	private long id;
+	private List<Order> orders;
+}
+
+class Order {
+	private String id;
+	private Member member;
+}
+
+void graph() {
+    Member member1 = new Mebmer(1);
+    Order order1 = new Order(1)
+
+    // 멤버에 해당 order 엔티티를 추가해준다.
+    member1.setOrders(Lists.newArrayList(order1));
+
+    // 멤버에서 order 엔티티 가져오기
+    Order findOrder= member1.getOrders().get(0); // 객체 그래프 탐색이라 한다.
+
+    // 가져온 order 엔티티에서 멤버 가져오기
+    findOrder.getMember();
+}
+```
