--- a/_posts/study/TIL/2021-09-29-33.md
+++ b/_posts/study/TIL/2021-09-29-33.md
@@ -1,5 +1,5 @@
 ---
-title:  "[데브코스] "
+title:  "[데브코스] JPA - 연관관계 매핑"
 date: 2021-09-29
 categories: 
   - TIL
@@ -10,7 +10,7 @@ toc: false
 toc_sticky: false
 ---
 
-W8D3 - 
+W8D3 Part1 - 연관관계 매핑과 그 특성에 대해 알아보자
 
 ## 연관관계 매핑
 
@@ -71,11 +71,31 @@ SELECT * FROM orders AS o JOIN member AS m
 ON o.member_id = m.id
 ```
 
+<br>
+
 ### 다중성
 
 - `일대일` 관계 (1:1) : 양쪽 엔티티가 서로 단 하나의 관계를 가지는 것
+
+<div class="sub_title">ex) 회원정보-주민등록번호 관계</div>
+
+![Untitled Diagram drawio (1)](https://user-images.githubusercontent.com/71180414/135474110-196285cb-b9e6-4403-8b38-734395f3b40e.png)
+
 - `일대다` 관계 (1:N) : 한쪽 엔티티가 다른 엔티티의 여러 객체를 가질 수 있는 것
+
+<div class="sub_title">ex) 회원-주문 관계</div>
+
+![Untitled Diagram drawio](https://user-images.githubusercontent.com/71180414/135469323-7c868dd9-714a-4379-8026-936fe9649fd5.png){:style="width:40%;"}
+
 - `다대다` 관계 (N:M) : 양쪽 엔티티 모두 1:N 관계를 가지는 것 (매핑 테이블이 필요하다.)
+
+<div class="sub_title">ex) 학생-수업 관계</div>
+
+![Untitled Diagram drawio (2)](https://user-images.githubusercontent.com/71180414/135474153-9cf64aa6-3907-49ad-a52d-07a1ee78a998.png)
+
+> 참고 : https://siyoon210.tistory.com/26
+
+<br>
 
 ### 연관관계 주인 (mappedBy)
 
@@ -84,6 +104,36 @@ ON o.member_id = m.id
 - 연관관계의 주인만이 외래키를 생성/수정/삭제 할 수 있음
   - 주인이 아닌 쪽은 조회만 가능
 - 테이블 중 FK가 있는 쪽이 연관관계의 주인이 된다.
+
+<div class="sub_title">ex) 회원-주문 관계</div>
+
+![Untitled Diagram drawio](https://user-images.githubusercontent.com/71180414/135469323-7c868dd9-714a-4379-8026-936fe9649fd5.png){:style="width:40%;"}
+
+
+```java
+class Member {
+	...
+	// 연관관계의 주인은 Order 엔티티이다. -> FK의 주인은 Order이므로 (Order에서만 member 객체를 가짐)
+	// 따라서 Member 엔티티에는 Order 엔티티가 가지는 member라는 객체를 매핑시켜줘야한다
+	@OneToMany(mappedBy = "member")
+	private List<Order> orders;
+}
+
+class Order {
+	...
+	// Order 엔티티 기준 다대일 관계
+	@ManyToOne
+	// order 테이블의 member_id라는 컬럼을 생성 -> member 테이블의 id 컬럼을 받아서 FK 지정
+	// 생략해도 자동으로 찾아서 설정된다 -> 하지만 가시성을 위해 명시
+	@JoinColumn(name = "member_id", referencedColumnName = "id")	
+	private Member member;
+}
+```
+
+- 데이터베이스 테이블의 다대일, 일대다 관계에서는 **항상 '다' 쪽이 외래 키를 가진다**. 
+- 위의 예제에서는 Member가 '일', Order가 '다'이므로 Order가 연관관계의 주인이 된다.
+
+<br>
 
 ### 객체 그래프 탐색
 
@@ -116,3 +166,5 @@ void graph() {
     findOrder.getMember();
 }
 ```
+
+<br>
