--- a/_posts/study/TIL/2021-09-29-35.md
+++ b/_posts/study/TIL/2021-09-29-35.md
@@ -15,7 +15,7 @@ W8D3 Part3 - Proxy / 영속성 전이 / 고아객체에 대해 알아보자
 
 ## Proxy
 
-- Entity는 객체가 데이터베이스(RDB)와 매핑되어 있어서 **자유롭개 객체를 탐색하는데 제한이 있다.**
+- Entity는 객체가 데이터베이스(RDB)와 매핑되어 있어서 **자유롭게 객체를 탐색하는데 제한이 있다.**
 - JPA는 프록시객체라는 기술을 사용하여 연관된 객체를 처음부터 데이터베이스에서 조회하지 않고, **실제 사용하는 시점에 조회할 수 있다**.
 	- `fetch` 전략에 따라 다르게 구현한다.
 
