--- a/_posts/study/TIL/2021-09-30-36.md
+++ b/_posts/study/TIL/2021-09-30-36.md
@@ -67,7 +67,7 @@ public interface 레포지토리 extends JpaRepository<엔티티, PK타입> {
 
 ### Querydsl
 
-- 복잡한 join, 동적쿼리 등을 작성할 때 사용
+- 복잡한 join, **동적쿼리** 등을 작성할 때 사용
 - 컴파일 시점 문법 오류 발견이 가능
 - JPQL보다 발전된 형태임..!
 
