--- a/_posts/study/TIL/2021-10-04-38.md
+++ b/_posts/study/TIL/2021-10-04-38.md
@@ -60,7 +60,7 @@ W9D1 - 클라우드 기술에 대해서 알아보자
 - **유형 1 또는 “베어메탈" 하이퍼바이저**는 기반 물리적 리소스와 상호작용함으로써 기존의 운영체제를 모두 대체합니다.
 - **유형 2 하이퍼바이저**는 기존 OS에서 애플리케이션으로 실행됩니다.
 
-### 가상화 vx 컨테이너화
+### 가상화 vs 컨테이너화
 
 - `가상화` : 컴퓨터 전체를 가상의 머신으로 만드는 것 (전체 OS를 실행)
 - `컨테이너화` : 소프트웨어 라이브러리 및 환경 변수 등만을 실행 (OS를 공유)
