--- a/_posts/study/TIL/2021-11-11-41.md
+++ b/_posts/study/TIL/2021-11-11-41.md
@@ -1,5 +1,5 @@
 ---
-title:  "[데브코스] Spring MVC Security"
+title:  "[데브코스] Spring Security - Basic"
 date: 2021-11-11
 categories: 
   - TIL
@@ -10,13 +10,13 @@ toc: false
 toc_sticky: false
 ---
 
-W15D1 - 보안 요소와 Spring MVC Security에 대해 알아보자
+W15D1 - 보안 요소와 Spring Security 기초부터 알아보자
 
 ## 보안
 
 - **인증(Authentication)** : 사용자의 신원을 확인하는 것
 - **인가(Authorization)** : 사용자 권한에 따라 특정 기능 수행 및 데이터 접근 허용
-- **크레덴셜(Credential)** : 민감정보 보호에 우선순위를 둬야하는 일
+- **크레덴셜(Credential)** : 자격 증명 방법을 지칭 (ex. 비밀번호)
 - **전송 레이어 보안** : SSL 적용, HTTPS
 
 <br>
@@ -74,7 +74,9 @@ public class WebSecurityConfigure extends WebSecurityConfigurerAdapter {
 }
 ```
 
-### Filter Chain
+<br>
+
+## Filter Chain
 
 - `WebSecurity`를 설정하는 메소드에서는 `FilterChainProxy`를 통해 여러 필터를 거치게된다.
 - 별도의 설정이 없다면 모든 필터(14개)를 불러와 실행하게 됨.
@@ -89,3 +91,65 @@ public void configure(WebSecurity web) {
     ...
 }
 ```
+
+<br>
+
+## InMemory User
+
+- 인메모리 방식으로 사용자를 등록시켜놓을 수 있다.
+
+### 방법 1
+
+- `application.yaml`에 작성하기
+
+```yaml
+spring:
+ security:
+   user:
+     name: 이름
+     password: 비번
+     roles: 역할
+```
+
+- 하지만 단 하나의 유저만 등록할 수 있다.
+- `UserDetailsServiceAutoConfiguration` -> `SecurityProperties` 클래스를 확인해보면 아래와 같이 프로퍼티를 불러오기에 가능함.
+
+![image](https://user-images.githubusercontent.com/71180414/141428834-5db5c259-e1cf-4c11-8766-9e3e1427aa28.png)
+
+### 방법 2
+
+- `AuthenticationManagerBuilder`를 사용한다
+- 여러 유저를 등록할 수 있다.
+
+```java
+@Override
+protected void configure(AuthenticationManagerBuilder auth) throws Exception {
+    auth.inMemoryAuthentication()
+            .withUser(아이디).password(비번).roles(규칙).and()
+            .withUser(아이디).password(비번).roles(규칙)
+            ...
+            ;
+}
+```
+
+<br>
+
+## Password
+
+### DelegatingPasswordEncoder
+
+- **Spring Secrity 5**부터 `DelegatingPasswordEncoder`가 기본 `PasswordEncoder`로 지정된다.
+- `DelegatingPasswordEncoder`의 규칙대로 비밀번호를 저장할때 사용할 암호화 알고리즘에 따라 prefix를 붙여주면된다.
+
+```
+{bcrypt}$2a$10$dXJ3SW6G7P50lGmMkkmwe.20cQQubK3.HZWzG3YB1tlRy.fqvM/BG
+{noop}password
+{pbkdf2}5d923b44a6d129f3ddf3e3c8d29412723dcbde72445e8ef6bf3b508fbf17fa4ed4d6b99ca763d8dc
+{sha256}97cde38028ad898ebc02e690819fa220e88c62e0699403e94fff291cfffaf8410849f27605abcbc0
+```
+
+- prefix 생략시 자동으로 `Bcypt`로 지정됨.
+- `InMemoryUserDetailsManager` 객체(구현체)를 사용한다면 최초 로그인 1회 성공시, {noop} 타입에서 → {bcrypt} 타입으로 PasswordEncoder가 변경된다.
+
+
+<br>
