--- a/_posts/study/TIL/2021-11-15-43.md
+++ b/_posts/study/TIL/2021-11-15-43.md
@@ -1,6 +1,6 @@
 ---
 title:  "[데브코스] "
-date: 2021-11-15
+date: 2021-11-14
 categories: 
   - TIL
 
@@ -11,3 +11,61 @@ toc_sticky: false
 ---
 
 W16D1 - 
+
+## Thread
+
+- Spring에서의 WAS(Tomcat)은 ThreadPool을 생성한다. (기본으로 200개를 생성)
+- 각 스레드는 한 요청을 맡아 작업이 끝날때까지 다른 요청을 받지 않음.
+- 요청이 끝나면 스레드를 반납한다.
+
+
+![image](https://user-images.githubusercontent.com/71180414/141684090-673aff4a-14ed-430a-9550-410b726b9779.png){:style="width:50%"}
+
+### ThreadLocal
+
+```java
+final static ThreadLocal<타입> threadLocalValue = new ThreadLocal<>();
+```
+
+- 하나의 스레드에서 전역적으로 공유 가능한 변수를 가질 수 있다.
+- 동일 스레드내에서는 어떤 계층에서든지 `ThreadLocal` 변수에 접근할 수 있다.
+- 하지만 서로 다른 스레드는 서로의 로컬 변수를 참조할 수 없다.
+- 하나의 요청을 맡은 스레드의 작업이 끝날때 반드시 로컬 변수는 clear해야 한다.
+    - 다음 요청시 해당 스레드에 변수가 남아있다면 로직 오류가 발생할 수 있기 때문
+
+<br>
+
+## SecurityContext
+
+![image](https://user-images.githubusercontent.com/71180414/141685658-9287c1bf-b892-4344-b9f2-e2609d312461.png){:style="width:50%"}
+
+### Authentication
+
+- 사용자를 표현하는 인증 토큰 인터페이스.
+- 토큰 종류는 다음과 같다.
+    - `AnonymousAuthenticationToken` : 익명 사용자를 표현
+    - `UsernamePasswordAuthenticationToken` : 로그인한 사용자를 표현
+    - `RememberMeAuthenticationToken` : remember-me로 로그인된 사용자 표현
+- 내부에는 다음과 같은 정보를 가진다.
+    - `Principal` : 인증여부에 따라 값이 달라짐. 보통 인증 후에 User 객체 저장
+    - `Credentials` : 비밀번호 등
+    - `Authorities` : 권한 리스트
+
+### SecurityContext
+
+- Spring Security는 `SecurityContext`를 사용해 인증정보를 관리한다.
+- `SecurityContext`는 `ThreadLocal` 변수에 담겨 1 요청 == 1 스레드 내에서 공유된다.
+- `SecurityContext` 자체는 특별한 기능 없이 `Authentication` 객체를 Wrapping 해주는 역할임
+
+<div class="sub_title">ThreadLocalSecurityContextHolderStrategy class</div>
+
+```java
+private static final ThreadLocal<SecurityContext> contextHolder = new ThreadLocal();
+```
+
+### SecurityContextHolder
+
+- `SecurityContextHolder`에서는 해당 `SecurityContext`에 접근하여 조작해주는 역할을 함
+    - SecurityContext get, set, clear 등등...
+- `FilterChainProxy`를 살펴보면 finally 블록에서 `SecurityContextHolder.clearContext()` 메소드를 호출한다.
+    - Thread가 ThreadPool에 반환되기전 ThreadLocal 변수 값을 제거하기 위함
