--- a/_posts/study/TIL/2021-11-12-42.md
+++ b/_posts/study/TIL/2021-11-12-42.md
@@ -1,5 +1,5 @@
 ---
-title:  "[데브코스] Spring Security - FilterChainProxy"
+title:  "[데브코스] Spring Security - 1"
 date: 2021-11-12
 categories: 
   - TIL
@@ -10,7 +10,7 @@ toc: false
 toc_sticky: false
 ---
 
-W15D2 - Spring Security 기본구조와 FilterChainProxy 종류에 대해 알아보자.
+W15D2 - Spring Security 기본구조와 FilterChainProxy에 대해 알아보자.
 
 
 ## Spring Security Architecture
