--- a/_posts/study/TIL/2021-11-15-43.md
+++ b/_posts/study/TIL/2021-11-15-43.md
@@ -1,6 +1,6 @@
 ---
-title:  "[데브코스] "
-date: 2021-11-14
+title:  "[데브코스] Spring Security - 2"
+date: 2021-11-15
 categories: 
   - TIL
 
@@ -10,7 +10,7 @@ toc: false
 toc_sticky: false
 ---
 
-W16D1 - 
+W16D1 - ThreadLocal, SecurityContext, 인증과정에 대해 알아보자
 
 ## Thread
 
@@ -42,7 +42,7 @@ final static ThreadLocal<타입> threadLocalValue = new ThreadLocal<>();
 ### Authentication
 
 - 사용자를 표현하는 인증 토큰 인터페이스.
-- 토큰 종류는 다음과 같다.
+- 토큰(구현체) 종류는 다음과 같다.
     - `AnonymousAuthenticationToken` : 익명 사용자를 표현
     - `UsernamePasswordAuthenticationToken` : 로그인한 사용자를 표현
     - `RememberMeAuthenticationToken` : remember-me로 로그인된 사용자 표현
@@ -69,3 +69,49 @@ private static final ThreadLocal<SecurityContext> contextHolder = new ThreadLoca
     - SecurityContext get, set, clear 등등...
 - `FilterChainProxy`를 살펴보면 finally 블록에서 `SecurityContextHolder.clearContext()` 메소드를 호출한다.
     - Thread가 ThreadPool에 반환되기전 ThreadLocal 변수 값을 제거하기 위함
+
+<br>
+
+## DefaultLoginPageGeneratingFilter
+
+- 로그인 페이지 html을 렌더링해주는 필터
+
+<div class="sub_title">DefaultLoginPageGeneratingFilter class</div>
+
+![image](https://user-images.githubusercontent.com/71180414/141808981-bcfbb63d-0fa9-4ae0-90e6-69aab7a4f05e.png){:style="width:80%"}
+
+- 기본 로그인 페이지 html을 이 클래스에서 생성하고 있음을 확인할 수 있음
+- 물론 로그인 페이지나 id/password parameter를 커스텀할 수 있다.
+
+```java
+http.formLogin()
+    .loginPage(커스텀URL)
+    .usernameParameter()
+    .passwordParameter()
+```
+
+<br>
+
+## Authentication
+
+- Spring Security에서 아이디/비밀번호를 사용한 인증절차는 아래와 같은 구조를 가진다.
+
+![image](https://user-images.githubusercontent.com/71180414/141810255-d7b40017-722e-48ba-a4d0-93e3007eb947.png)
+
+
+- 어떤 사용자가 로그인을 시도했다고 가정했을 때, 아래와 같은 클래스들이 사용된다.
+
+![temp drawio (1)](https://user-images.githubusercontent.com/71180414/141839462-3c259932-4aac-4d0c-a115-96f371776f0f.png)
+
+- 파란색은 인터페이스, 회색은 구현체이다.
+- `AbstractAuthenticationProcessingFilter` : 사용자 인증을 위한 토큰(`Authentication` 객체)를 생성함
+    - `UsernamePasswordAuthenticationToken`을 생성
+    - 여기서 권한 리스트 `authorities`는 null이다.
+- `AuthenticationManager` : 사용자 인증을 위한 Provider 리스트를 관리한다.
+    - `AuthenticationManager`의 default 구현체는 `ProviderManager`
+    - 실제 인증을 처리할 Provider는 토큰(`Authentication` 객체) 종류에 따라 결정된다.
+    - `UsernamePasswordAuthenticationToken`일 경우 `DaoAuthenticationProvider`가 선택된다.
+- `AuthenticationProvider` : 실제 인증 로직을 처리하고, 최종 토큰을 생성한다.
+    - 권한 리스트 `authorities`를 담는다
+
+<br>
