--- a/_posts/study/TIL/2021-11-15-43.md
+++ b/_posts/study/TIL/2021-11-15-43.md
@@ -98,12 +98,13 @@ http.formLogin()
 
 ![image](https://user-images.githubusercontent.com/71180414/141810255-d7b40017-722e-48ba-a4d0-93e3007eb947.png)
 
+### 로그인 인증
 
 - 어떤 사용자가 로그인을 시도했다고 가정했을 때, 아래와 같은 클래스들이 사용된다.
 
-![temp drawio (1)](https://user-images.githubusercontent.com/71180414/141839462-3c259932-4aac-4d0c-a115-96f371776f0f.png)
+![login drawio](https://user-images.githubusercontent.com/71180414/141947726-68374443-31b6-4bd7-b415-2bc7bc9a18b5.png)
 
-- 파란색은 인터페이스, 회색은 구현체이다.
+- **파란색은 인터페이스, 회색은 구현체이다.**
 - `AbstractAuthenticationProcessingFilter` : 사용자 인증을 위한 토큰(`Authentication` 객체)를 생성함
     - `UsernamePasswordAuthenticationToken`을 생성
     - 여기서 권한 리스트 `authorities`는 null이다.
@@ -113,5 +114,26 @@ http.formLogin()
     - `UsernamePasswordAuthenticationToken`일 경우 `DaoAuthenticationProvider`가 선택된다.
 - `AuthenticationProvider` : 실제 인증 로직을 처리하고, 최종 토큰을 생성한다.
     - 권한 리스트 `authorities`를 담는다
+
+### RememberMe 인증
+
+- RememberMe를 체크하고 로그인한 사용자가 나중에 다시 로그인할 경우
+
+![remember drawio](https://user-images.githubusercontent.com/71180414/142010480-76f81211-1f93-4748-9e4c-da0c2298f9ee.png)
+
+- 쿠키를 파싱하여 정보를 받아온다.
+- 인증이 될때마다 토큰을 새로 생성한다.
+
+
+```java
+.rememberMe()
+    .key(키값)
+    .tokenValiditySeconds(쿠키수명)
+    .rememberMeParameter(파라미터이름)
+    .rememberMeCookieName(쿠키이름)
+    .alwaysRemember(bool값) // 활성화 여부
+```
+
+- 여러 쿠키 설정을 커스텀할 수 있다.
 
 <br>
