--- a/_posts/study/TIL/2021-09-29-33.md
+++ b/_posts/study/TIL/2021-09-29-33.md
@@ -10,7 +10,7 @@ toc: false
 toc_sticky: false
 ---
 
-W8D3 Part1 - 연관관계 매핑의 방향성, 다중성, 연관관계 주인, 객체그래프 탐색에 대해 알아보자
+W8D3 Part1 - 연관관계 매핑의 방향성 / 다중성 / 연관관계 주인 / 객체그래프 탐색에 대해 알아보자
 
 ## 연관관계 매핑
 
