--- a/_posts/study/TIL/2021-11-15-43.md
+++ b/_posts/study/TIL/2021-11-15-43.md
@@ -10,7 +10,7 @@ toc: false
 toc_sticky: false
 ---
 
-W16D1 - ThreadLocal, SecurityContext, 인증과정에 대해 알아보자
+W16D1 - ThreadLocal / SecurityContext / 인증과정에 대해 알아보자
 
 ## Thread
 
