--- a/_posts/study/TIL/2021-11-17-45.md
+++ b/_posts/study/TIL/2021-11-17-45.md
@@ -10,7 +10,7 @@ toc: false
 toc_sticky: false
 ---
 
-W16D3 - 
+W16D3 - 인증 Event / 보안관련 Header / CsrfFilter / Basic 인증 / Async 처리에 대해 알아보자
 
 ## AbstractAuthenticationEvent
 
@@ -207,6 +207,9 @@ public class WebSecurityConfigure extends WebSecurityConfigurerAdapter {
 
 - 스레드 로컬 변수인 `SecurityContext`를 다른 스레드에 전파해주는 클래스
 - Bean으로 떠있다가 Async로 스레드가 생성되어 작업될 때 WAS의 스레드 로컬 변수를 참조하여 가져온다.
+- 아래와 같이 설정해줘야 한다
+
+<div class="sub_title">WebSecurityConfigure 클래스</div>
 
 ```java
 @Bean
