--- a/_posts/study/TIL/2021-11-16-44.md
+++ b/_posts/study/TIL/2021-11-16-44.md
@@ -10,7 +10,7 @@ toc: false
 toc_sticky: false
 ---
 
-W16D2 - Session 관련 필터와 인가처리에 대해 알아보자
+W16D2 - Session 관련 필터 / 인가처리에 대해 알아보자
 
 ## SecurityContextPersistenceFilter
 
