--- a/_posts/study/TIL/2021-08-09-7.md
+++ b/_posts/study/TIL/2021-08-09-7.md
@@ -59,6 +59,8 @@ W2D1 - Database의 필요성, 백엔드와 관계, SQL등에 대해 배워보자
 - 웹 서비스에서 사용하는 아키텍처
 - 프론트엔드 + 백엔드 + 데이터베이스로 구성
 
+![image](https://user-images.githubusercontent.com/71180414/142762987-0603331c-4e83-4a1d-9467-4902f1ec2379.png)
+
 <br>
 
 ## SQL (Structured Qurery Language)
