--- a/_posts/review/project/2021-08-08-1.md
+++ b/_posts/review/project/2021-08-08-1.md
@@ -1,8 +1,8 @@
 ---
-title:  "프로젝트 회고 - 졸업요건 검사 사이트 Please Graduate"
+title:  "졸업요건 검사 사이트 Please Graduate 회고"
 date: 2021-08-08
 categories:
-  - PG
+  - project
 
 # 고정값
 classes: wide
