--- a/_posts/review/project/2021-08-08-1.md
+++ b/_posts/review/project/2021-08-08-1.md
@@ -10,7 +10,9 @@ toc: false
 toc_sticky: false
 ---
 
-## 사이트를 구현하면서 느낀점들 주저리 주저리
+처음으로 사용자가 있는 사이트를 만들며 느낀점들 주저리 주저리
+
+## 처음해보는 회고
 
 애증의 Please Graduate ... 최종 배포까지 많은 고난이 함께했기에 내가 느꼈던 점들을 포스팅해보려 한다.<br>
 글을 쓰는 재능이 없어서 걱정이지만 ㅜ 내가 가장 열정적으로 개발했던 프로젝트의 역사를 써보고 싶어서...ㅋㅋ<br>
