--- a/_posts/study/TIL/2021-08-26-20.md
+++ b/_posts/study/TIL/2021-08-26-20.md
@@ -123,7 +123,7 @@ namedParameterJdbcTemplate.update(쿼리, ParamMap, Integer.class)
 
 ## Transaction
 
-- 트랜잭션 기본 개념 - [🚀 포스팅 이동](/TIL/11/)
+- 트랜잭션 기본 개념 - [🚀 포스팅 이동](/til/11/)
 - JDBC에서 오토 커밋 default 값은 true이므로... -> 쿼리가 트랜잭션으로 묶여서 실행되지 않음
 - 따라서 `connection.setAutoCommit(false)`로 오토 커밋을 꺼주고 commit과 rollback을 적용해 트랜잭션을 구현한다.
 
