--- a/_posts/tech/Java/2022-03-03-7.md
+++ b/_posts/tech/Java/2022-03-03-7.md
@@ -1,6 +1,6 @@
 ---
-title:  "String vs StringBuffer vs StringBuilder"
-date: 2021-08-02
+title:  "String 파헤치기"
+date: 2022-03-03
 categories:
   - Java
 
@@ -10,11 +10,38 @@ toc: false
 toc_sticky: false
 ---
 
-Constant pool을 효율적으로 사용할 수 있는 StringBuilder와 StringBuffer에 대해 공부하자
+String의 동작원리와 StringBuffer, StringBuilder에 대해 알아보자
 
 > 해당 포스팅은 Java의 정석 책을 참고하였습니다
 
 ## String
+
+- 우선 String을 생성하는 방법에는 두가지가 있다
+    - literal : `""`를 사용하여 생성하기
+    - Object : `new`를 사용하여 생성하기
+
+literal은 평소에 자연스럽게 사용하는 방식이고, 다른 방식으로 선언할 생각을 안해봤다..
+String도 참조타입이니까 Object 방식으로 선언할 수도 있는데 말이다 (;)
+우선 literal 방식의 동작원리부터 살펴보자
+
+<div class="sub_title">literal 방식으로 초기화</div>
+
+```java
+String str1 = "a";
+String str2 = "a";
+
+System.out.println(s1 == s2);  // -> true
+```
+
+동일한 문자열의 객체의 주소값을 비교했을 때 true가 나온다. (??)
+str1과 str2는 다른 객체니까 주소값이 달라야 하는게 아닌가?
+이는 String이 불변(`Immutable`) 객체라는 것과 `String Constant Pool`의 이해가 필요하다.
+
+
+
+
+
+
 
 ### 예제코드
 
