자바 포스팅

--- a/_posts/tech/Java/2022-03-03-7.md
+++ b/_posts/tech/Java/2022-03-03-7.md
@@ -12,52 +12,74 @@ toc_sticky: false
 
 String의 동작원리와 StringBuffer, StringBuilder에 대해 알아보자
 
-> 해당 포스팅은 Java의 정석 책을 참고하였습니다
-
 ## String
 
 - 우선 String을 생성하는 방법에는 두가지가 있다
     - literal : `""`를 사용하여 생성하기
     - Object : `new`를 사용하여 생성하기
 
-literal은 평소에 자연스럽게 사용하는 방식이고, 다른 방식으로 선언할 생각을 안해봤다..
-String도 참조타입이니까 Object 방식으로 선언할 수도 있는데 말이다 (;)
-우선 literal 방식의 동작원리부터 살펴보자
+리터럴 방식은 평소에 자연스럽게 사용하는 방식이고, 다른 방식으로 선언할 생각을 안해봤다..   
+String도 참조타입이니까 Object 방식으로 선언할 수도 있는데 말이다  
+우선 리터럴 방식의 동작원리부터 살펴보자
 
-<div class="sub_title">literal 방식으로 초기화</div>
+### 리터럴 방식으로 초기화 
 
 ```java
 String str1 = "a";
 String str2 = "a";
 
-System.out.println(s1 == s2);  // -> true
+System.out.println(str1 == str2);  // -> true
 ```
 
-동일한 문자열의 객체의 주소값을 비교했을 때 true가 나온다. (??)
-str1과 str2는 다른 객체니까 주소값이 달라야 하는게 아닌가?
-이는 String이 불변(`Immutable`) 객체라는 것과 `String Constant Pool`의 이해가 필요하다.
+동일한 문자열 변수의 주소값을 비교했을 때 true가 나온다. (??)   
+str1과 str2는 다른 객체니까 주소값이 달라야 하는게 아닌가?   
+이는 리터럴 방식으로 생성한 String이 불변(`Immutable`) 객체라는 것과 `String Constant Pool`의 이해가 필요하다.   
+위의 예제는 JVM 메모리 영역에 아래와 같이 저장된다.   
+
+![string](https://user-images.githubusercontent.com/71180414/156753699-ebfa5830-e4c2-4c79-96f0-dfa66160098d.png)
+
+분명 String은 참조 타입으로 객체이지만, 동일한 문자열을 선언할때 메모리를 새롭게 할당받지 않고 기존 주소를 가리킨다.   
+리터럴 방식으로 생성했을 경우, 이렇게 `String Constant Pool` 메모리 영역에 문자열이 저장되게 된다.   
+그럼 `new`를 사용하여 인스턴스를 생성하게 되면 어떻게 동작할까?
 
 
-
-
-
-
-
-### 예제코드
+### new 방식으로 초기화
 
 ```java
-String str = "abc";
-str = str + "123";
-System.out.println(str);
+String str3 = new String("a");
+String str4 = new String("a");
+
+System.out.println(str3 == str4);  // -> false
 ```
 
-- 위 결과는 `"abc123"`이 출력된다.
-- 여기서 String 객체 `str`가 가리키는 주소의 값이 과연 `"abc123"`으로 변했을까?
-- 아니다. 기존의 `str`가 가리키던 `"abc"` 주소값은 가만히 있고 새로운 주소값에 `"abc123"`이 들어가고 `str`는 그 주소를 가리킨다.
-- 이는 메모리 효율이 최악이다. 문자열 변경할때마다 새로 생긴다니...
+리터럴 방식과 달리 두 변수가 서로 다른 주소값을 가지는 것을 알 수 있다.   
+JVM 메모리 영역에서는 아래와 같이 저장된다.   
 
-<img width='700' src='https://user-images.githubusercontent.com/71180414/127957877-b15d8111-c049-4537-9d0d-9f59c5f03304.png'>
+![](https://user-images.githubusercontent.com/71180414/156755437-41fb86c3-27c3-4d21-bee1-1f438d97f42d.png)
 
+분명 `String Constant Pool`에 동일한 문자열이 있었음에도 pool을 사용하지 않고 메모리를 새롭게 할당받는다.   
+또한 동일한 인스턴스를 생성해도 주소값을 공유하지 않고 계속 새롭게 할당되는 것을 알 수 있다.   
+결론적으로 String을 **리터럴 방식으로 초기화하여 사용하는것이 효율적인 것이다**.   
+리터럴 방식으로 초기화할 땐 String이 불변객체로 동작하는데, 이는 문자열의 변경과정을 살펴보면 더 쉽게 이해할 수 있다.
+
+### 리터럴 문자열 변경
+
+```java
+String str1 = "a";
+String str2 = "a";
+
+str2 = str2 + "b";
+```
+
+위와 같이 문자열 변수에 "b"를 덧붙여 주었다.   
+이 동작을 메모리 영역에서 살펴보면 아래와 같다.
+
+![](https://user-images.githubusercontent.com/71180414/156756843-c0155153-6da6-4803-9351-26501c237904.png)
+
+단순히 "b"를 추가하는데도 "b"가 `String Constant Pool`에 추가된다.   
+`String Constant Pool`에 있는 문자열들은 불변객체로 동작하기 때문에 이런 일이 발생하는 것이다.   
+따라서 String에서의 무분별한 추가, 삭제 연산은 메모리 낭비를 발생시킨다는 것을 알 수 있다.   
+`StringBuffer`나 `StringBuilder`와 같은 컬렉션을 사용한다면 이런 메모리 누수를 방지할 수 있다.   
 
 <br>
 
@@ -89,8 +111,9 @@ public final class StringBuffer implements java.io.Serializable{
 }
 ```
 
-- 입력값 없이 Default로 객체 생성시 버퍼의 기본크기는 `16`이다
-- 문자열을 입력해 생성시 버퍼의 크기는 해당 `문자열 길이 + 여유분 16`으로 생성된다
+StringBuffer는 내부적으로 버퍼라고 부르는 char 가변 배열을 가진다.   
+입력값 없이 Default로 객체 생성시 버퍼의 기본크기는 `16`이다   
+문자열을 입력해 생성시 버퍼의 크기는 해당 `문자열 길이 + 여유분 16`으로 생성된다
 
 ### StringBuffer로 문자열 변경하기
 
@@ -100,20 +123,22 @@ sb.append("123");
 StringBuffer sb2 = sb.append("ZZ");
 ```
 
-- StringBuffer는 내부적인 버퍼가 있기 때문에 새로운 주소를 사용하지 않는다.
-- 버퍼는 char 배열로 이루어져있고, 버퍼 크기는 가변적으로 조절된다.
-- 내부 메소드 `append`는 버퍼에 문자열을 추가 후 해당 주소값을 리턴한다!
+이 동작을 메모리 영역에서 살펴보면 아래와 같다.
 
 <img width='700' src='https://user-images.githubusercontent.com/71180414/127962280-c2f9a198-2a23-4db3-a582-9059e821bb32.png'>
 
+String과 달리 StringBuffer는 내부 버퍼가 있기에, 불변객체를 따로 생성할 필요가 없다.   
+문자열 변경시 내부 버퍼만 수정해주면 되기 때문이다.   
+그럼 StringBuffer와 비슷한 StringBuilder는 어떤 차이점을 가지고 있을까?   
 
 <br>
 
 ## StringBuilder
 
-- StringBuffer는 multi thread에 thread safe 하도록 동기화되어 있음 (뭔소리지?)
-- multi thread 프로그램이 아닌 경우 StringBuffer의 동기화는 불필요하게 성능을 저하시킴
-- StringBuilder는 StringBuffer의 동기화 기능을 뺀 클래스이며, StringBuffer와 완전 똑같이 작동한다고 한다~
+- 기본적인 기능은 StringBuffer와 같다.
+- StringBuffer는 멀티스레드 환경에서 thread safe 하도록 동기화되어 있는 반면, StringBuilder는 비동기적으로 동작한다.
+- 따라서 멀티스레드 환경이 아닌 경우, StringBuilder의 성능이 더 뛰어나다.
+
 
 ```java
 // StringBuffer와 선언이랑 사용법까지 다 똑같음
