--- a/_posts/tech/Spring/2022-03-11-3.md
+++ b/_posts/tech/Spring/2022-03-11-3.md
@@ -10,12 +10,12 @@ toc: false
 toc_sticky: false
 ---
 
-Spring에서의 MVC 패턴과 DispatcherServlet을 알아보자
-
+Spring에서의 MVC 패턴 역사와 DispatcherServlet을 알아보자
 
 ## MVC 패턴
 
-지금까지 잘 알고 있는줄 알았던 MVC 패턴을 스프링에서 어떻게 사용하는지 알아보고자 한다.   
+전 포스팅에서는 서블릿이 뭔지에 대해 미리 알아봤었다.   
+이번엔 지금까지 잘 알고 있는줄 알았던 MVC 패턴을 스프링에서 어떻게 사용하는지 알아보고자 한다.   
 
 ### 정의
 
@@ -42,12 +42,15 @@ public 서블릿 extends HttpServlet {
 ```
 
 위 예시 코드를 보면 하나의 서블릿이 요청을 받고, 서비스로직을 처리 후 html에 데이터를 바인딩하는 것을 볼 수 있다.   
-즉 모델, 뷰, 컨트롤러의 책임을 하나의 서블릿이 모두 맡아 처리하는 것이다.   
-누가봐도 코드가 더럽고 유지보수가 힘들어 보인다. 그래서 JSP가 등장한다.   
+즉 **모델, 뷰, 컨트롤러의 책임을 하나의 서블릿이 모두 맡아** 처리하는 것이다.   
+
+누가봐도 코드가 복잡하고 유지보수가 힘들어 보인다. 그래서 MVC 패턴이 점점 발전한다.   
 
 ## JSP
 
-JSP? 그거 완전 오래된 기술 아니야? 라고 생각했었는데, 여기에 스프링의 역사가 담겨있었다.   
+- Java Server Pages의 약자로, HTML에 자바 코드를 넣어 동적 웹페이지를 만드는 기술
+
+JSP? 그거 완전 오래된 기술 아니야? 라고 생각했었는데, 여기에 스프링 MVC의 역사가 담겨있었다.   
 
 우선 JSP의 초기 모델인 `MVC1` 부터 살펴보자
 
@@ -55,37 +58,114 @@ JSP? 그거 완전 오래된 기술 아니야? 라고 생각했었는데, 여기
 
 ```jsp
 <%
-String str = "test";
+// java 코드블럭
+String model = "HI";
 %>
 
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title></title>
+    <meta charset="UTF-8">
+    <title></title>
 </head>
+
 <body>
-	<span><%= str %></span>
+	<span><%= model %></span>
 </body>
+
 </html>
 ```
 
 java 코드와 html 문법이 혼재되어 있는 형태이다.   
 보통 java 코드 블록에서 java bean으로 등록된 model을 불러와 사용할 수 있다.   
 
-즉, jsp의 파일하나가 컨트롤러와 뷰의 책임을 맡는 것이다.
+즉, jsp의 파일 하나가 **컨트롤러와 뷰의** 책임을 맡는 것이다.
 
 ![image](https://user-images.githubusercontent.com/71180414/157804029-d2540e45-efd7-4feb-9295-4dc7ce3a40c2.png)
 
-이와 같이 말도 안되는 복잡도로 여기에 서블릿을 추가한 `MVC2`가 등장한다.
+이와 같이 또 결합도 높은 코드가 불편했는지 여기에 서블릿을 추가한 `MVC2`가 등장한다.
 
 <div class="sub_title">MVC2</div>
 
 ```java
-// web.xml이나 @WebServlet로 매핑되는 서블릿. 컨트롤러의 역할을 함
+// web.xml이나 @WebServlet로 매핑되는 서블릿. (컨트롤러의 역할을 함)
 public 서블릿 extends HttpServlet {
+
+    private final Service service;
+
     public void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-        // 모델 사용
+        // 모델 생성
+        String model = service.getDummy();
+        req.setAttribute("model", model);
+        // view에 전달
+        req.getRequestDispatcher("/어쩌구.jsp").forward(req, res);
     }
 }
 ```
 
+```jsp
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+</head>
+
+<body>
+	<span><%= model %></span>
+</body>
+
+</html>
+```
+
+우선 MVC1과 달리 서블릿이 추가되었다는 것을 알 수 있다.   
+
+1. 코드를 보면 우선 요청은 서블릿으로 먼저 받게 된다. 즉 서블릿이 컨트롤러의 역할을 한다   
+2. 선택된 서블릿은 요청 객체에 대한 서비스 로직을 수행하고, 서비스 계층에서 모델을 가져와 요청에 바인딩한다.   
+3. 그리고 해당 요청을 자바코드와 분리되어 있는 jsp를 찾아서 바인딩하는데, 여기서 view가 분리되었다는 것을 알 수 있다.   
+
+결과적으로 **M, V, C 계층이 모두 분리된 형태**를 알 수 있고, 이것이 MVC 패턴의 기본이 되었다고 할 수 있다.
+
+![image](https://user-images.githubusercontent.com/71180414/157859370-74969601-4eb3-4854-b10b-4471ef6a6b41.png)
+
+MVC2의 동작과정은 대충 알것 같지만, 이를 서블릿 컨테이너 시점에서 살펴보면 약간의 문제점이 보인다.   
+
+<div class="sub_title">MVC2에서의 요청 흐름</div>
+
+![](https://user-images.githubusercontent.com/71180414/157863469-754b62c9-f440-4668-a5f8-5e805e3c3f9a.png)
+
+요청이 들어올때마다 요청 url에 맞는 **서블릿을 각자 하나씩 생성하고 매핑**해주어야 하는 것을 알 수 있다.    
+서블릿을 직접 만들고 등록하면서는 써보지는 않았지만, 이런 방식이라면 개발이 너무 불편할 것 같다는 생각이 든다.   
+
+따라서 등장한 것이 Spring MVC 프레임워크이다.
+
+<br>
+
+## Spring
+
+우선 Spring MVC를 살펴보기 전 Spring 프레임워크의 정의에 대해 알아보자
+
+> 자바 플랫폼을 위한 오픈소스 어플리케이션 프레임워크
+
+음. 이건 얼추 알고 있는 정의인데, 여기서 **어플리케이션 프레임워크**라고 부른다.   
+그럼 일반 프레임워크와는 다른 것일까? 자주 헷갈리는 라이브러리, 프레임워크에 대해 살펴보면,
+
+- 라이브러리 : 개발자가 호출하여 사용할 수 있는 도구의 집합
+- 프레임워크 : 소프트웨어의 특정 문제를 해결하기 위한 상호 협력하는 클래스와 인터페이스의 집합
+
+이렇게 한줄로 정의할 수 있는데, 라이브러리와 프레임워크의 가장 큰 차이점은 **어플리케이션의 흐름 주도권이 누구에게 있느냐** 이다.   
+즉, 프레임워크가 정의한 흐름 위에서 개발자가 코드를 써내려가는 스프링은 그야말로 프레임워크인 것이다.   
+
+<br>
+
+### Spring MVC
+
+그럼 Spring MVC는 뭘까?
+Spring MVC 또한 프레임워크라 할 수 있다. 여기서 갑자기 또 헷갈린다. 그럼 Spring과 Spring MVC는 다른 것인가?   
+
+Spring, Spring Boot, Spring MVC의 상관관계를 대충 나타내면 아래와 같다.   
+
+![](https://user-images.githubusercontent.com/71180414/157877110-03027e97-0f68-49d2-b9b6-0c8ab9ecf1f3.png)
+
+Spring은 관련 기술을 모두 통칭하는 프레임워크이고, Spring MVC는 Spring **프레임워크 내에 존재하는 코어 모듈 프레임워크**이다.   
+그림을 보면 Spring Boot 또한 Spring에 포함되며, 개발자가 원하는 코어 모듈 의존성을 추가하여 사용할 수 있는 것이다.   
