--- a/_posts/tech/Spring/2022-03-10-2.md
+++ b/_posts/tech/Spring/2022-03-10-2.md
@@ -13,7 +13,7 @@ toc_sticky: false
 Spring 동작의 기초. Servlet부터 알아보자!!
 
 Spring의 기초 기술과 기술 발전과정을 쭈욱 훑어보면서 Spring Boot가 어떻게 탄생했는지를 알아보려고 한다.   
-(세번의 포스팅에 걸쳐 알아볼 예정임)
+(세 번의 포스팅에 걸쳐 알아볼 예정이다)
 
 ## Servlet이란
 
@@ -72,7 +72,7 @@ Spring의 기초 기술과 기술 발전과정을 쭈욱 훑어보면서 Spring 
 그동안 스프링으로 서버를 개발할때, 모든 요청과 응답을 마법처럼 만들어주는게 아니라 서블릿이라는 기술이 열일하고 있었다.   
 사실 서블릿은 Spring 동작원리를 이해하기 위한 기초 발판이였다. (!!)   
 
-다음 포스팅에서 MVC 패턴과 Spring MVC의 동작원리에 대해 알아보도록 하자
+다음 포스팅에서 Spring에서의 MVC 패턴이 어떻게 등장했는지에 대해 알아보도록 하겠다.
 
 <br>
 
