spring 동작원리 끝

--- a/_posts/tech/Spring/2022-03-12-4.md
+++ b/_posts/tech/Spring/2022-03-12-4.md
@@ -1,6 +1,6 @@
 ---
 title:  "Spring의 동작원리 3"
-date: 2022-03-11
+date: 2022-03-12
 categories: 
   - Spring
 
@@ -55,7 +55,9 @@ MVC2에서는 서블릿이 컨트롤러 역할을 해서 직접 요청을 매핑
 
 그렇다면 `DispatcherServlet`이 뭔지에 대해 자세히 살펴보자
 
-### DispatcherServlet
+<br>
+
+## DispatcherServlet
 
 Spring MVC에서는 Front Controller 패턴을 적용하였다.   
 그림에서 봤듯이 `Front Controller == DispatcherServlet`이고 Spring Container의 제일 앞단에서 요청을 처리해주는 녀석이다.   
@@ -79,9 +81,34 @@ Spring MVC에서는 Front Controller 패턴을 적용하였다.
 
 위와 같은 과정을 통해서 Spring MVC 위에서 동적 웹페이지를 만들어 내는 것이다.
 
-여기서 ViewResolver에 따라 JSP나 Thymeleaf와 같은 View 형식을 선택할 수도 있는데, 이를 좀더 자세히 알아봐야 한다.
+여기서 ViewResolver에 따라 JSP나 Thymeleaf와 같은 템플릿 엔진을 선택할 수도 있는데, 이를 좀더 자세히 알아봐야 한다.
 
-### ViewResolver
+<br>
 
+## ViewResolver
 
+뷰 리졸버 또한 Spring Bean으로 등록되기에 `WebMvcConfigurer` 빈을 수정함으로써 템플릿 엔진을 변경할 수 있다.   
 
+일단 default 뷰 리졸버는 `InternalResourceViewResolver`로, JSP를 뷰로 사용한다.   
+Thymeleaf를 사용하기 위해선 뷰 리졸버에 `ThymeleafViewResolver`를 추가해주면 된다.   
+
+하지만 CSR이 등장하면서, 현재 스프링은 Rest API와 같은 형태로 많이 사용된다.   
+그럼 Rest API에서 반환되는 json은 어떻게 만들어지는 것일까?
+
+![image](https://user-images.githubusercontent.com/71180414/131729800-fc57caed-9da6-43a1-ba5a-12504ee07e9d.png){:style="width:70%; margin-top:15px;"}
+
+위 그림과 같이 `HandlerAdapter`에서 뷰 리졸버가 아닌 `MessageConverter`가 동작하게 된다.   
+분명 메시지 컨버터 적용하기를 [데브코스](https://hanjo8813.github.io/til/27/)에서 배웠었는데, 너무 어려웠어서 까먹었다...   
+
+<br>
+
+## 정리
+
+여기까지 Servlet부터 시작해서 Spring MVC까지 스프링의 동작원리에 대해 살펴보았다.   
+물론 Spring Boot가 이 모든것을 처리해주긴 하지만, 개발하다보니 Spring의 기초를 잘 아는것이 매우 중요하다는 것을 맨날 느낀다.   
+그래서 꾸준히 Spring 프레임워크에 대해 공부하고, 포스팅해나갈 예정이다.
+
+- [Spring 동작원리 1편 - Servlet](https://hanjo8813.github.io/spring/2/)
+- [Spring 동작원리 2편 - JSP](https://hanjo8813.github.io/spring/3/)
+
+<br>
