--- a/_posts/tech/Spring/2022-03-11-4.md
+++ b/_posts/tech/Spring/2022-03-11-4.md
@@ -1,6 +1,6 @@
 ---
 title:  "Spring의 동작원리 3"
-date: 2022-03-12
+date: 2022-03-11
 categories: 
   - Spring
 
@@ -103,6 +103,12 @@ Thymeleaf를 사용하기 위해선 뷰 리졸버에 `ThymeleafViewResolver`를 
 <br>
 
 ## 정리
+
+사용자 요청의 동작 흐름을 처음부터 끝까지 그림으로 나타내면 다음과 같다.   
+(Spring Boot를 기준으로 하였음)
+
+![](https://user-images.githubusercontent.com/71180414/157896029-43bf3091-18bc-4313-a25b-0d2f5bcf0859.png)
+
 
 여기까지 Servlet부터 시작해서 Spring MVC까지 스프링의 동작원리에 대해 살펴보았다.   
 물론 Spring Boot가 이 모든것을 처리해주긴 하지만, 개발하다보니 Spring의 기초를 잘 아는것이 매우 중요하다는 것을 맨날 느낀다.   
