--- a/_posts/tech/Spring/2022-03-10-2.md
+++ b/_posts/tech/Spring/2022-03-10-2.md
@@ -1,5 +1,5 @@
 ---
-title:  "Spring의 동작원리 1"
+title:  "Spring에서의 요청 흐름 1 - Servlet"
 date: 2022-03-10
 categories: 
   - Spring
@@ -10,7 +10,7 @@ toc: false
 toc_sticky: false
 ---
 
-Spring 동작의 기초. Servlet부터 알아보자!!
+Spring 요청의 흐름. Servlet부터 알아보자!!
 
 Spring의 기초 기술과 기술 발전과정을 쭈욱 훑어보면서 Spring Boot가 어떻게 탄생했는지를 알아보려고 한다.   
 (세 번의 포스팅에 걸쳐 알아볼 예정이다)
