--- a/_posts/tech/Spring/2022-03-11-4.md
+++ b/_posts/tech/Spring/2022-03-11-4.md
@@ -1,5 +1,5 @@
 ---
-title:  "Spring의 동작원리 3"
+title:  "Spring에서의 요청 흐름 3 - Spring MVC"
 date: 2022-03-11
 categories: 
   - Spring
@@ -114,7 +114,7 @@ Thymeleaf를 사용하기 위해선 뷰 리졸버에 `ThymeleafViewResolver`를 
 물론 Spring Boot가 이 모든것을 처리해주긴 하지만, 개발하다보니 Spring의 기초를 잘 아는것이 매우 중요하다는 것을 맨날 느낀다.   
 그래서 꾸준히 Spring 프레임워크에 대해 공부하고, 포스팅해나갈 예정이다.
 
-- [Spring 동작원리 1편 - Servlet](https://hanjo8813.github.io/spring/2/)
-- [Spring 동작원리 2편 - JSP](https://hanjo8813.github.io/spring/3/)
+- [Spring에서의 요청 흐름 1편 - Servlet](https://hanjo8813.github.io/spring/2/)
+- [Spring에서의 요청 흐름 2편 - MVC, JSP](https://hanjo8813.github.io/spring/3/)
 
 <br>
